swagger and refactoring
