# web/handler/update.go
@@ -9,6 +9,13 @@ import (
 	"github.com/mserebryaakov/microservices-training/data"
 )
 
+// swagger:route PUT /products/{id} products updateProduct
+// Update product with the enter id from the database
+// responses:
+//	201: noContent
+//	400: errorResponse
+//	422: errorValidation
+
 func (p *Products) UpdateProduct(rw http.ResponseWriter, r *http.Request) {
 	vars := mux.Vars(r)
 	id, err := strconv.Atoi(vars["id"])
